--- a/inst/report/SignalDetectionReport_body.Rmd
+++ b/inst/report/SignalDetectionReport_body.Rmd
@@ -1,17 +1,13 @@
+{{pathogen}} {data-navmenu="Pathogen"}
+=====================================
 
-
-```{r libraries}
-library(dplyr)
-library(SignalDetectionTool)
-library(htmltools)
-library(flexdashboard)
-```
-
-```{r parameters}
+```{r}
 if (is.null(params$data)) {
   data <- SignalDetectionTool::input_example
 }
 ```
+
+<!-- Pathogen without stratification page -->
 
 Row {data-height=100}
 -------------------------------------
@@ -25,42 +21,43 @@ Row {data-height=100}
 
 ```{r}
 if (!is.null(params$signals_padded) & !is.null(params$signals_agg)) {
-  signals_agg <- params$signals_agg
-  signals_padded <- params$signals_padded
+  signals_agg <- params$signals_agg[["{{pathogen}}"]]
+  signals_padded <- params$signals_padded[["{{pathogen}}"]]
 } else {
-  data_preprocessed <- SignalDetectionTool::preprocess_data(data)
-  signal_results <- SignalDetectionTool::get_signals(data_preprocessed,
-    stratification = NULL,
-    method = params$method,
-    number_of_weeks = params$number_of_weeks,
-    intervention_date = params$intervention_date
-  )
-
-  if (!is.null(params$strata)) {
-    signal_results_stratified <- SignalDetectionTool::get_signals(
-      data_preprocessed,
-      stratification = params$strata,
-      method = params$method,
-      number_of_weeks = params$number_of_weeks,
-      intervention_date = params$intervention_date
-    )
-
-    signal_results <- signal_results %>%
-      dplyr::bind_rows(signal_results_stratified)
-
-    signals_agg <- SignalDetectionTool::aggregate_signals(signal_results_stratified,
-      number_of_weeks = params$number_of_weeks
-    )
-  }
-
-  if (grepl("glm", params$method)) {
-    signals_padded <- signal_results
-  } else {
-    signals_padded <- SignalDetectionTool::pad_signals(
-      data_preprocessed,
-      signal_results
-    )
-  }
+  stop("Provide signals_agg and signals padded") 
+  # data_preprocessed <- SignalDetectionTool::preprocess_data(data)
+  # signal_results <- SignalDetectionTool::get_signals(data_preprocessed,
+  #   stratification = NULL,
+  #   method = params$method,
+  #   number_of_weeks = params$number_of_weeks,
+  #   intervention_date = params$intervention_date
+  # )
+  # 
+  # if (!is.null(params$strata)) {
+  #   signal_results_stratified <- SignalDetectionTool::get_signals(
+  #     data_preprocessed,
+  #     stratification = params$strata,
+  #     method = params$method,
+  #     number_of_weeks = params$number_of_weeks,
+  #     intervention_date = params$intervention_date
+  #   )
+  # 
+  #   signal_results <- signal_results %>%
+  #     dplyr::bind_rows(signal_results_stratified)
+  # 
+  #   signals_agg <- SignalDetectionTool::aggregate_signals(signal_results_stratified,
+  #     number_of_weeks = params$number_of_weeks
+  #   )
+  # }
+  # 
+  # if (grepl("glm", params$method)) {
+  #   signals_padded <- signal_results
+  # } else {
+  #   signals_padded <- SignalDetectionTool::pad_signals(
+  #     data_preprocessed,
+  #     signal_results
+  #   )
+  # }
 }
 ```
 
@@ -74,18 +71,14 @@ results_analysis <- signals_padded %>%
     is.na(category),
     !is.na(alarms)
   )
-
-
-stringr::str_glue(
-  "In the signal detection period - last {params$number_of_weeks} weeks available in the data - ",
-  "there were {sum(results_analysis$cases)} cases of {params$disease} in {params$country}. ",
-  "Using the {names(params$method)} algorithm {sum(results_analysis$alarms)} signal{ifelse(sum(results_analysis$n_alarms) == 1, '', 's')} {ifelse(sum(results_analysis$n_alarms) == 1, ' was', ' were')} detected."
-)
 ```
 
+In the signal detection period - last `r params$number_of_weeks` weeks available in the data - there were `r sum(results_analysis$cases)` cases of {{pathogen}} in `r params$country`.
+
+Using the `r params$method` algorithm, `r sum(results_analysis$alarms)` `r ifelse(sum(results_analysis$n_alarms) == 1, 'signal', 'signals')` `r ifelse(sum(results_analysis$n_alarms) == 1, ' was', ' were')` detected.
 
 ```{r}
-#| fig.cap=paste0("Number of ", params$disease, " cases by week and signals, ", params$country),
+#| fig.cap=paste0("Number of {{pathogen}} cases by week and signals, ", params$country),
 #| out.width="100%"
 SignalDetectionTool::plot_time_series(
   signals_padded %>%
@@ -118,4 +111,17 @@ if (sum(results_analysis$alarms, na.rm = TRUE) != 0) {
 #|eval = is.character(txt)
 
 cat(txt)
+```
+
+
+<!-- Strata subpages -->
+
+```{r, results='asis'}
+src <- lapply(params$strata, function(j) {
+  knitr::knit_expand('SignalDetectionReport_strata.rmd', 
+                     strat = j, pathogen = "{{pathogen}}")
+})
+
+res <- knitr::knit_child(text = unlist(src), quiet = TRUE)
+cat(res, sep = "\n")
 ```
