--- a/inst/report/word_report/SignalDetectionReport_body.Rmd
+++ b/inst/report/word_report/SignalDetectionReport_body.Rmd
@@ -60,21 +60,8 @@ if (!is.null(params$signals_padded) & !is.null(params$signals_agg)) {
   }
 }
 ```
-# Summary
 
-```{r, results='asis'}
 
-for (strat in params$strata){
-  p <- SignalDetectionTool:::decider_barplot_map_table(
-  signals_agg,
-  data,
-  strat,
-  interactive = params$interactive
-)
-  print(htmltools::tagList(p))
-}
-  
-```
 # Signal Detection 
 
 ```{r, results='asis'}
@@ -100,7 +87,7 @@ SignalDetectionTool::plot_time_series(
   signals_padded %>%
     dplyr::filter(is.na(category)),
   intervention_date = params$intervention_date,
-  interactive = params$interactive
+  interactive = FALSE
 )
 ```
 
@@ -110,11 +97,10 @@ SignalDetectionTool::plot_time_series(
 txt <- NULL
 
 if (sum(results_analysis$alarms, na.rm = TRUE) != 0) {
-  format <- ifelse(params$interactive, "DataTable", "Flextable")
   SignalDetectionTool::build_signals_table(
     signals_padded %>%
       dplyr::filter(is.na(category)),
-    format = format
+    format = "Flextable"
   )
 } else {
   txt <- "No signals were detected."
