--- a/inst/report/SignalDetectionReport_strata.Rmd
+++ b/inst/report/SignalDetectionReport_strata.Rmd
@@ -1,4 +1,3 @@
-
 ```{r}
 strat_text <- dplyr::case_when(
   "{{strat}}" == "age_group" ~ "agegroup",
@@ -6,7 +5,7 @@ strat_text <- dplyr::case_when(
 )
 ```
 
-### Signals stratified by `r strat_text`
+### Signals Timeseries by `r strat_text`
 
 ```{r, results='asis'}
 results_analysis <- signals_agg %>%
@@ -14,17 +13,6 @@ results_analysis <- signals_agg %>%
 ```
 
 When stratifying by `r strat_text`, the `r params$method` algorithm detects `r sum(results_analysis$n_alarms)` `r ifelse(sum(results_analysis$n_alarms) == 1, 'signal', 'signals')`  in the signal detection period.
-
-```{r}
-#| fig.cap=paste0("Number of {{pathogen}} cases and signals stratified by ", strat_text, ", ", params$country),
-#| out.width="100%"
-SignalDetectionTool:::decider_barplot_map_table(
-  signals_agg,
-  data,
-  "{{strat}}",
-  interactive = params$interactive
-)
-```
 
 ```{r}
 df <- signals_padded %>%
@@ -46,13 +34,11 @@ eval_paginate <- !grepl("html", format, ignore.case = TRUE)
 txt <- NULL
 ```
 
-#### Plot
-
 ```{r}
 #| eval= !eval_paginate,
 #| fig.cap=paste0("Number of {{pathogen}} cases by week and signals stratified by ", strat_text, ", ", params$country),
-#| fig.dim = c(8, number_stratum),
-#| fig.fullwidth=TRUE
+#| out.width="65%",
+#| out.height="65%"
 
 plot_time_series(df,
   number_of_weeks = 52,
@@ -60,7 +46,7 @@ plot_time_series(df,
   interactive = FALSE
 ) +
   ggplot2::facet_wrap(~stratum,
-    ncol = 2,
+    nrow = 2,
     scales = "free_y",
     drop = FALSE
   ) +
@@ -70,36 +56,7 @@ plot_time_series(df,
   )
 ```
 
-```{r, results='asis'}
-#| eval= eval_paginate,
-#| fig.cap=paste0("Number of {{pathogen}} cases by week and signals stratified by ", strat_text, ", ", params$country),
-#| fig.dim = c(8, p_height),
-#| fig.fullwidth=TRUE
-
-for (i in seq_len(pages)) {
-  p <- plot_time_series(df,
-    number_of_weeks = 52,
-    intervention_date = params$intervention_date,
-    interactive = FALSE
-  ) +
-    ggforce::facet_wrap_paginate(~stratum,
-      ncol = 2,
-      nrow = 6,
-      scales = "free_y",
-      page = i,
-      drop = FALSE
-    ) +
-    ggplot2::scale_x_date(
-      date_breaks = "2 months", date_labels = "%Y-%m-%d",
-      expand = c(0, 0)
-    )
-
-  print(p)
-}
-```
-
-
-`r if (params$tables) "#### Signal Detection Table"`
+`r if (params$tables) paste("### Signals table by", strat_text)`
 
 ```{r}
 #| eval= params$tables
