--- a/inst/report/SignalDetectionReport_body.Rmd
+++ b/inst/report/SignalDetectionReport_body.Rmd
@@ -9,10 +9,8 @@ if (is.null(params$data)) {
 
 <!-- Pathogen without stratification page -->
 
-Row {data-height=100}
+Row {data-height=150}
 -------------------------------------
-### Color Box
-
 ```{r}
 if (!is.null(params$signals_padded) & !is.null(params$signals_agg)) {
   signals_agg <- params$signals_agg[["{{pathogen}}"]]
@@ -30,9 +28,47 @@ results_analysis <- signals_padded %>%
   )
 ```
 
-In the signal detection period - last `r params$number_of_weeks` weeks available in the data - there were `r sum(results_analysis$cases)` cases of {{pathogen}} in `r params$country`.
+<!-- Valueboxes colour: less than 10% = primary, less than 50% = warning, else = danger -->
 
-Using the `r params$method` algorithm, `r sum(results_analysis$alarms)` `r ifelse(sum(results_analysis$n_alarms) == 1, 'signal', 'signals')` `r ifelse(sum(results_analysis$n_alarms) == 1, ' was', ' were')` detected.
+### Number of cases
+```{r}
+valueBox(value = sum(results_analysis$cases), 
+         caption = "cases of {{pathogen}}")
+```
+
+### Number of signals
+```{r}
+n_signals_week <- sum(results_analysis$alarms)
+n_signals_week_col <- ifelse(
+  n_signals_week/params$number_of_weeks < 0.10, "primary",
+  ifelse(n_signals_week/params$number_of_weeks < 0.50, "warning", "danger")
+  )
+
+valueBox(value = sum(results_analysis$alarms),
+         caption = paste("Number of signals in the last",
+                         params$number_of_weeks, 
+                         "weeks"),
+         color = n_signals_week_col
+         )
+```
+
+### Stratified signals
+```{r}
+n_signals_st <- nrow(signals_agg %>% filter(any_alarms))
+n_signals_st_col <- ifelse(
+  n_signals_st/nrow(signals_agg) < 0.10, "primary",
+  ifelse(n_signals_st/nrow(signals_agg) < 0.50, "warning", "danger")
+  )
+
+valueBox(value = n_signals_st,
+         caption = "Strata with signals", 
+         color = n_signals_st_col)
+```
+
+
+<!-- In the signal detection period - last `r params$number_of_weeks` weeks available in the data - there were `r sum(results_analysis$cases)` cases of {{pathogen}} in `r params$country`.
+
+Using the `r params$method` algorithm, `r sum(results_analysis$alarms)` `r ifelse(sum(results_analysis$n_alarms) == 1, 'signal', 'signals')` `r ifelse(sum(results_analysis$n_alarms) == 1, ' was', ' were')` detected. -->
 
 Row {data-height=300}
 -------------------------------------
