--- a/inst/report/html_report/SignalDetectionReport_body.Rmd
+++ b/inst/report/html_report/SignalDetectionReport_body.Rmd
@@ -20,45 +20,10 @@ Row {data-height=100}
 
 
 ```{r}
-if (!is.null(params$signals_padded) & !is.null(params$signals_agg)) {
-  signals_agg <- params$signals_agg[["{{pathogen}}"]]
-  signals_padded <- params$signals_padded[["{{pathogen}}"]]
-} else {
-  stop("Provide signals_agg and signals padded") 
-  # data_preprocessed <- SignalDetectionTool::preprocess_data(data)
-  # signal_results <- SignalDetectionTool::get_signals(data_preprocessed,
-  #   stratification = NULL,
-  #   method = params$method,
-  #   number_of_weeks = params$number_of_weeks,
-  #   intervention_date = params$intervention_date
-  # )
-  # 
-  # if (!is.null(params$strata)) {
-  #   signal_results_stratified <- SignalDetectionTool::get_signals(
-  #     data_preprocessed,
-  #     stratification = params$strata,
-  #     method = params$method,
-  #     number_of_weeks = params$number_of_weeks,
-  #     intervention_date = params$intervention_date
-  #   )
-  # 
-  #   signal_results <- signal_results %>%
-  #     dplyr::bind_rows(signal_results_stratified)
-  # 
-  #   signals_agg <- SignalDetectionTool::aggregate_signals(signal_results_stratified,
-  #     number_of_weeks = params$number_of_weeks
-  #   )
-  # }
-  # 
-  # if (grepl("glm", params$method)) {
-  #   signals_padded <- signal_results
-  # } else {
-  #   signals_padded <- SignalDetectionTool::pad_signals(
-  #     data_preprocessed,
-  #     signal_results
-  #   )
-  # }
-}
+
+signals_agg <- params$signals_agg %>% dplyr::filter(pathogen == pathogen)
+signals_padded <- params$signals_padded %>% dplyr::filter(pathogen == pathogen)
+
 ```
 
 Row {.tabset}
