--- a/inst/report/html_report/SignalDetectionReport_strata.Rmd
+++ b/inst/report/html_report/SignalDetectionReport_strata.Rmd
@@ -1,3 +1,6 @@
+{{pathogen}}-{{strat}} {data-orientation=columns .hidden}
+===========================================================================
+
 ```{r}
 strat_text <- dplyr::case_when(
   "{{strat}}" == "age_group" ~ "agegroup",
@@ -11,8 +14,6 @@ strat_text <- dplyr::case_when(
 results_analysis <- signals_agg %>%
   dplyr::filter(any_alarms, category %in% "{{strat}}")
 ```
-
-<!-- When stratifying by `r strat_text`, the `r params$method` algorithm detects `r sum(results_analysis$n_alarms)` `r ifelse(sum(results_analysis$n_alarms) == 1, 'signal', 'signals')`  in the signal detection period. -->
 
 ```{r}
 df <- signals_padded %>%
@@ -73,3 +74,6 @@ if (sum(df$alarms, na.rm = TRUE) != 0) {
 
 cat(txt)
 ```
+
+
+
