--- a/inst/report/html_report/SignalDetectionReport_gauges.Rmd
+++ b/inst/report/html_report/SignalDetectionReport_gauges.Rmd
@@ -1,17 +1,18 @@
-### Signals in {{category}}
+### Signals in [{{category}}](#`r tolower("{{pathogen}}")`-{{category}})
 
 <!-- Gauge colour: less than 10% = primary, less than 50% = warning, else = danger -->
 
 ```{r}
 n_signals <- signals_agg %>% dplyr::filter(category == "{{category}}")
+max_signals <- nrow(n_signals) * params$number_of_weeks
 gauge(
  value = sum(n_signals$n_alarms),
- min = 0, max = nrow(n_signals) * params$number_of_weeks,
+ min = 0, max = max_signals,
  label = "Signals",
  sectors = gaugeSectors(
-   success = c(0, 0.1*nrow(n_signals)),
-   warning = c(0.1*nrow(n_signals), 0.5*nrow(n_signals)),
-   danger = c(0.5*nrow(n_signals), nrow(n_signals)),
+   success = c(0, 0.1*max_signals),
+   warning = c(0.1*max_signals, 0.5*max_signals),
+   danger = c(0.5*max_signals, max_signals),
    colors = c("primary", "warning", "danger")
  )
 )
