--- a/inst/report/html_report/SignalDetectionReport.Rmd
+++ b/inst/report/html_report/SignalDetectionReport.Rmd
@@ -47,7 +47,7 @@ Landing Page
 
 ```{r}
 # For calculating week of start and end
-records <- signals_padded %>% 
+records <- params$signals_padded %>% 
   dplyr::filter(!is.na(alarms)) %>% 
   dplyr::count(year, week) %>% 
   dplyr::mutate(yearweek = sprintf("%d-W%02d", year, week))
@@ -113,7 +113,7 @@ Row
 # following example from https://www.r-bloggers.com/2023/04/heatmap-formatting-of-a-table-with-dt/
 
 # counts signals in category
-tmp_df <- signals_padded %>%
+tmp_df <- params$signals_padded %>%
   dplyr::filter(!is.na(alarms)) %>%
   dplyr::mutate(
     date = paste0("Y",year, ".W", week),
@@ -187,7 +187,7 @@ dt
 ```{r, eval=FALSE}
 # Links with plotly apparently don't work inside flexdashboard
 
-tmp_df <- signals_padded %>%
+tmp_df <- params$signals_padded %>%
   dplyr::filter(!is.na(alarms)) %>%
   dplyr::mutate(
     date = paste0("Y",year, ".W", week),
@@ -222,7 +222,7 @@ split(tmp_df, tmp_df$pathogen) %>%
        )
   }
   ) %>% 
-  plotly::subplot(nrows = 3, shareX = TRUE)
+  plotly::subplot(nrows = min(length(params$disease),3), shareX = TRUE)
 ```
 
 
